[package]
name = "utils"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
tempfile = "3"
reqwest = { version = "0.10.8", default-features = false, features = ["blocking", "json"] }
serde_json = { version = "1.0", default-features = false }
warp = { version = "0.1.20", default-features = false }
