[package]
name = "isis-ants-api"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
license = "Apache-2.0"
repository = "https://github.com/cubeos/cubeos"
edition = "2018"

[features]
nos3 = ["rust-i2c/nos3"]

[dependencies]
failure = "0.1.2"
nom = "4.0.0-beta1"
rust-i2c = { path = "../../hal/rust-hal/rust-i2c", optional = true }

[build-dependencies]
cubeos-build-helper = {path = "../../cubeos-build-helper"}
