[package]
name = "kubos-system"
version = "0.1.0"
authors = ["Marshall Culpepper <marshall@kubos.com>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
log4rs = "0.8.3"
log4rs-syslog = "3.0"
log = { version = "^0.4.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
syslog = { version = "4.0", default-features = false }
toml = "0.4"

[dev-dependencies]
tempfile = "3"
