[package]
name = "kubos-telemetry-db"
version = "0.1.0"
authors = ["Marshall Culpepper <marshall@kubos.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
log = { version = "^0.4.0" }
serde = { version = "1.0" }
serde_derive = { version = "1.0"}
time = "0.1"
