[package]
name = "obc-hs"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
kubos-app = { path = "../../apis/app-api/rust" }
log = { version = "^0.4.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
toml = "0.4"
time = "0.1"