[package]
name = "channel-protocol"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
cbor-protocol = { path = "../cbor-protocol" }
failure = "0.1.8"
log = { version = "^0.4.0", default-features = false }
rand = "0.5"
serde_cbor = "0.8"
simplelog = "^0.5.0"
