[package]
name = "comms-service"
version = "0.1.0"
authors = ["William Greer <wgreer184@gmail.com>", "Sam Justice <sam.justice1@gmail.com"]
edition = "2018"

[dependencies]
byteorder = "1.2.7"
failure = "0.1.8"
juniper = { version = "0.14.2" }
kubos-system = { path = "../../apis/system-api" }
log = { version = "^0.4.0", default-features = false }
pnet = "0.23.0"
reqwest = { version = "0.10.8", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
toml = "0.4.10"

[dev-dependencies]
bytes = "*"
tempfile = "3.0"
utils = { path = "../../utils" }
warp = { version = "0.1.20", default-features = false }
