[package]
name = "file-protocol"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
serde_cbor = "0.8"
simplelog = "^0.5.0"
log = { version = "^0.4.0", default-features = false }
time = "0.1"
blake2-rfc = "0.2.18"
serde = { version = "1.0", default-features = false }
rand = "0.5"
cbor-protocol = { path = "../cbor-protocol" }
failure = "0.1.8"
