[package]
name = "shell-protocol"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
cbor-protocol = { path = "../cbor-protocol" }
channel-protocol = { path = "../channel-protocol" }
failure = "0.1.8"
libc = "0.2"
log = { version = "^0.4.0", default-features = false }
nix = "0.11.0"
rand = "0.5"
serde_cbor = "0.8"
simplelog = "^0.5.0"
timeout-readwrite = "0.1"
