[package]
name = "cubeos-app-service"
version = "0.1.0"
authors = ["Marshall Culpepper <marshall@kubos.com>", "Catherine Garabedian <catherine@kubos.com>"]
edition = "2018"

[dependencies]
kubos-app = { path = "../../apis/app-api/rust" }
kubos-service = { path = "../kubos-service" }

chrono = "0.4"
failure = "0.1.8"
fs_extra = "1.1.0"
juniper = { version = "0.14.2" }
log = { version = "^0.4.0", default-features = false }
nix = "0.11.0"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
toml = "0.4"
uuid = { version = "0.6", features = ["v4"] }
tempfile = "3"

[dev-dependencies]
kubos-system = { path = "../../apis/system-api" }
reqwest = { version = "0.10.8", default-features = false, features = ["blocking", "json"] }
serde_json = { version = "1.0", default-features = false }
warp = { version = "0.1.20", default-features = false }
