[package]
name = "clyde-3g-eps-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>", "Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[dependencies]
clyde-3g-eps-api = { path = "../../apis/clyde-3g-eps-api" }
eps-api = { path = "../../apis/eps-api" }
failure = "0.1.8"
juniper = { version = "0.14.2" }
kubos-service = { path = "../kubos-service" }
log = { version = "^0.4.0", default-features = false }
rust-i2c = { path = "../../hal/rust-hal/rust-i2c" }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false }
warp = { version = "0.1.20", default-features = false }