[package]
name = "file-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
cbor-protocol = { path = "../../libs/cbor-protocol" }
failure = "0.1.8"
file-protocol = { path = "../../libs/file-protocol" }
kubos-system = { path = "../../apis/system-api" }
log = { version = "^0.4.0", default-features = false }
serde_cbor = "0.8"

[dev-dependencies]
blake2-rfc = "0.2.18"
rand = "0.5.5"
serde = { version = "1.0", default-features = false }
serde_cbor = "0.8"
tempfile = "3"
