[package]
name = "iobc-supervisor-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
juniper = { version = "0.14.2" }
isis-iobc-supervisor = { path = "../../apis/isis-iobc-supervisor" }
kubos-service = { path = "../kubos-service" }
log = { version = "^0.4.0", default-features = false }
