[package]
name = "isis-ants-service"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[features]
nos3 = ["isis-ants-api/nos3"]

[dependencies]
failure = "0.1.8"
isis-ants-api = { path = "../../apis/isis-ants-api" }
juniper = { version = "0.14.2" }
kubos-service = { path = "../kubos-service" }
log = { version = "^0.4.0", default-features = false }

[dev-dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
warp = { version = "0.1.20", default-features = false }
