[package]
name = "mai400-service"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
juniper = { version = "0.14.2" }
kubos-service = { path = "../kubos-service" }
log = { version = "^0.4.0", default-features = false }
mai400-api = { path = "../../apis/mai400-api" }

[dev-dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
warp = { version = "0.1.20", default-features = false }
