[package]
name = "monitor-service"
version = "0.1.0"
authors = ["Marshall Culpepper <marshall@kubos.com>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
juniper = { version = "0.14.2" }
kubos-service = { path = "../kubos-service" }
log = { version = "^0.4.0", default-features = false }
regex = "1"

[dev-dependencies]
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
lazy_static = "1.1.0"
