[package]
name = "novatel-oem6-service"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[features]
nos3 = ["novatel-oem6-api/nos3"]

[dependencies]
failure = "0.1.8"
juniper = { version = "0.14.2" }
kubos-service = { path = "../kubos-service" }
log = { version = "^0.4.0", default-features = false }
novatel-oem6-api = { path = "../../apis/novatel-oem6-api" }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false }
warp = { version = "0.1.20", default-features = false }
