[package]
name = "nsl-duplex-d2-comms-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.com>"]
edition = "2018"

[dependencies]
comms-service = { path = "../../libs/comms-service" }
failure = "0.1.8"
juniper = { version = "0.14.2" }
kubos-service = { path = "../../services/kubos-service" }
log = { version = "^0.4.0", default-features = false }
nsl-duplex-d2 = { path = "../../apis/nsl-duplex-d2" }
