[package]
name = "scheduler-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"
failure = "0.1.8"
juniper = { version = "0.14.2" }
kubos-service = { path = "../kubos-service" }
serde = { version = "1.0", features = ["derive"]}
log = { version = "^0.4.0", default-features = false }
reqwest = { version = "0.10.8", default-features = false, features = ["blocking", "json"] }
serde_json = { version = "1.0" }
syslog = "4.0"
tokio = "0.1"
futures = "*"

[dev-dependencies]
tempfile = "3.0"
utils = { path = "../../utils" }


