[package]
name = "shell-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
cbor-protocol = { path = "../../libs/cbor-protocol" }
channel-protocol = { path = "../../libs/channel-protocol" }
failure = "0.1.8"
kubos-system = { path = "../../apis/system-api" }
log = { version = "^0.4.0", default-features = false }
serde_cbor = "0.8"
shell-protocol = { path = "../../libs/shell-protocol" }