[package]
name = "telemetry-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>", "Andrew Cantino <andrew@kubos.co>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
flate2 = "1.0"
juniper = { version = "0.14.2" }
kubos-service = { path = "../kubos-service" }
kubos-telemetry-db = { path = "../../apis/telemetry-db-api" }
log = { version = "^0.4.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
tar = "0.4"
time = "0.1"

[dev-dependencies]
reqwest = { version = "0.10.8", default-features = false, features = ["blocking", "json"] }
tempfile = "3"
