[package]
name = "kubos-app"
version = "0.1.0"
authors = ["Marshall Culpepper <marshall@kubos.com>", "Catherine Garabedian <catherine@kubos.com>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
getopts = "0.2"
kubos-system = { path = "../../system-api" }
log = { version = "^0.4.0", default-features = false }
log4rs = "0.8"
log4rs-syslog = "3.0"
reqwest = { version = "0.10.8", default-features = false, features = ["blocking", "json"] }
serde_json = { version = "1.0", default-features = false }

[dev-dependencies]
kubos-service = { path = "../../../services/kubos-service" }
juniper = { version = "0.14.2" }
tempfile = "3"
