[package]
name = "example-rust-c-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
extern-lib = { path = "../extern-lib" }
kubos-service = { path = "../../../services/kubos-service" }
juniper = { version = "0.14.2" }
log = { version = "^0.4.0", default-features = false }